css/override.css.scss
@import 'foundation_global';

$fluentry-dark-yellow: rgb(253, 187, 17);
$fluentry-dark-gray: rgb(51, 51, 51);
$fluentry-light-gray: rgba(51, 51, 51, 0.80);
$fluentry-very-light-gray: rgba(51, 51, 51, 0.10);
$fluentry-blue: rgb(4, 104, 164);
$fluentry-light-blue: rgba(4, 104, 164, 0.80);
$fluentry-very-light-blue: rgba(16, 151, 232, 0.40);
$fluentry-font-color: rgb(64, 64, 65);
$fluentry-link-blue: rgba(4, 104, 164, 0.8);

//font-family: 'Droid Serif', serif;
//font-family: 'Roboto', sans-serif;

@mixin font-droid() {
  font-family: 'Droid Serif', serif;
}

@mixin font-roboto() {
  font-family: 'Roboto', sans-serif;
}

@mixin fluentry-button() {
  color: #ffffff;
  background-color: $fluentry-dark-yellow;
  @include font-roboto;
  font-size: emCalc(18px);
  line-height: 0.7em;
  margin: 0;
  border: 1px solid $fluentry-dark-yellow;
  @include radius(4px);
  box-shadow: none;
  padding-top: 0.7em;
  &:hover {
    background-color: lighten($fluentry-dark-yellow, 10%);
  }
}

a {
  color: rgb(4, 104, 164);
  &:hover {
    color: darken(rgb(4, 104, 164), 20%);
  }
}

.top-bar {
  -webkit-box-shadow: 0 1px 10px rgba(0, 0, 0, 0.2);
  -moz-box-shadow: 0 1px 10px rgba(0, 0, 0, 0.2);
  box-shadow: 0 1px 10px rgba(0, 0, 0, 0.2);
  .title-area {
    .name {
      img {
        vertical-align: top;
        margin-top: 10px;
        min-width: 164px;
        width: 164px;
        height: 35px;
      }
    }
  }
}

.top-bar-section ul li {
  position: relative;

  > a {
    &:hover {
      @include single-transition;
      //color: $fluentry-link-blue;
      //background-color: darken(#FFFFFF, 5%);
      color: #000000;
    }
    &.login {
      color: $fluentry-link-blue;
      font-weight: bold;
    }
  }

  .yellow-underbar {
    visibility: hidden;
    position: absolute;
    left: 14px;
    right: 14px;
    bottom: 11px;
    height: 4px;
    background-color: $fluentry-dark-yellow;
  }

  &:hover {
    .yellow-underbar {
      visibility: visible;
    }
  }
}

// style the button in the nav
.top-bar-section ul li > a.button, .top-bar .button {
  @include fluentry-button;
  font-size: emCalc(15px);
  padding-top: 0.5em;
  font-weight: normal;
  margin-top: 5px;
}

.top-bar-section ul li>a {
  border: none;
}

// blog post block
.main-content {
  padding-top: emCalc(60px);
  padding-right: emCalc(15px);
  background-color: #FFFFFF;
  min-height: 600px;
}

.sidebar {
  padding-top: emCalc(60px);
}

.content-wrapper {
  background-image: url(../img/very-light-gray-square.png);
  background-repeat: repeat;

}

// used for archive page, for category/author/archive results
h1.page-title {
  font-size: emCalc(32px);
}

// I can't tell where the style="padding-top: 55px" is coming from, hence this hack :(
body {
  padding-top: 0px !important;
}

// blog post styling
article {
  margin-bottom: 80px;

  header {
    h3 {
      position: relative;
      margin-bottom: 20px;
      a {
        @include font-roboto;
        font-size: 36px;
        color: rgb(51, 51, 51);
        font-weight: normal;
      }
    }
  }

  p {
    font-weight: 300;
  }

  footer, .entry-meta {
    @include font-roboto;
    font-weight: 300;
    font-size: emCalc(12px);
    font-style: italic;
  }
  .entry-meta {
    margin-bottom: 45px;
  }
}

h3, h5 {
  position: relative;

  .header-decoration {
    position: absolute;
    left: 0;
    bottom: -5px;
    background-color: $fluentry-dark-yellow;
    width: 132px;
    height: 1px;
  }
}


// sidebar
.sidebar {
  .widget-block {
    margin-top: 50px;
    &:first-of-type {
      margin-top: 0;
    }
  }

  h5 {
    @include font-droid;
    font-size: 36px;
    color: rgb(93, 93, 93);
    font-weight: bold;
    font-style: italic;
  }

  ul, .textwidget {
    @include font-roboto;
    font-size: emCalc(16px);
    color: rgb(93, 93, 93);
    font-weight: 300;
  }

  .textwidget {
    line-height: emCalc(24px);
  }

}

@media only screen and (min-width: 768px) {
  .main-content {
    padding-right: 30px;
  }
}

@media only screen and (min-width: 805px) {
  .main-content {
    padding-right: 75px;
  }
}

